# windowspace

./: .clang-format  CMakeLists.txt  CMakePresets.json  DefaultConfig.toml  LICENSE  README.md
.github/workflows/: release.yml
bucket/: windowspace.json
src/: DefaultConfig.h.in  main.c  main.h
